# DENSN-Atlas

./: .env.example  .gitattributes  .gitignore  CHANGELOG.md  CITATION.cff  CODEOWNERS  COMMERCIAL-LICENSING.md  CONTRIBUTING.md  DENSN_FRAMEWORK_EXPERT_BRIEF.md  LICENSE.txt  README.md  SECURITY.md  SUPPORT.md  architecture.md  evaluation_contract.md  failure_modes.md  interfaces.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
densn/: __init__.py  artifact_store.py  artifacts.py  cache.py  constraints.py  dynamics.py  graph.py  lifecycle.py  memory.py  proof_contract.py  proposal_review.py  proposals.py  records.py  semantic.py  system.py  telemetry.py  transformer.py  tsl.py  verifier.py
repro/: README.md  environment_manifest.json  expected_metrics.json  run_repro.ps1
scripts/: check_phase12_regression.py  export_demo_figure_data.py  package_repro_kit.py  run_core_integrity_audit.py  run_credit_window.py  run_decisive_demo.py  run_final_proof_bundle.py  run_formal_protocol.py  run_formal_window.py  run_fresh_live_bundle.py  run_gauntlet.py  run_gauntlet_report.py  run_pathway_a.py  run_phase5_report.py  run_proof_manifest.py  run_proposal_audit.py  run_proposal_precision_campaign.py  run_proposal_quality.py  run_proposal_runtime.py  run_quorum_commit.py  run_quorum_proposal_quality.py  run_quorum_proposal_runtime.py  run_real_world_etcd_raft.py  run_real_world_gauntlet.py  run_real_world_lock_transfer.py  run_real_world_master_summary.py  run_real_world_proposal_assist.py  run_real_world_proposal_precision.py  run_real_world_raft_rs_read_index.py  run_xor.py  (+11 more)
(+172 files in other folders)
