[project]
name = "densn-atlas"
version = "0.1.0"
description = "DENSN Atlas: persistent contradiction-driven abstraction invention system"
requires-python = ">=3.12"

[project.optional-dependencies]
dev = ["pytest>=9.0", "ruff>=0.15"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["densn*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"scripts/*.py" = ["E402"]
